--- a/CodeArtEng.ControlsTest/CodeArtEng.ControlsTest.csproj
+++ b/CodeArtEng.ControlsTest/CodeArtEng.ControlsTest.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CodeArtEng.ControlsTest</RootNamespace>
     <AssemblyName>CodeArtEng.ControlsTest</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -89,6 +89,7 @@
     </Compile>
     <EmbeddedResource Include="Test2.resx">
       <DependentUpon>Test2.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
